--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
     "uglify-js": "^3.10.0",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
