--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "devino-web-sdk",
   "version": "1.0.0",
-  "description": "",
-  "private": true,
+  "description": "Devino web SDK",
+  "main": "./dist/devino-web-sdk.js",
+  "files": [
+    "dist/devino-web-sdk.js"
+  ],
+  "access": "public",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:dev": "webpack --env.dev"
   },
   "keywords": [],
-  "author": "",
+  "author": "Devino",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.5",
