--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "devino-web-sdk",
-  "version": "1.0.2",
+  "name": "test-d-web-sdk",
+  "version": "1.0.0",
   "description": "Devino web SDK",
   "main": "./dist/devino-web-sdk.js",
   "files": [
